--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,22 @@
     <title>geekrodion</title>
   </head>
   <style>
+    @font-face {
+      font-family: Light;
+      src: url("/fonts/light.otf");
+    }
+    @font-face {
+      font-family: Regular;
+      src: url("/fonts/regular.otf");
+    }
+    @font-face {
+      font-family: Medium;
+      src: url("/fonts/medium.otf");
+    }
+    @font-face {
+      font-family: DancingBold;
+      src: url("/fonts/dancing-bold.ttf");
+    }
     * {
       margin: 0;
       outline: none;
