--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <meta name="keywords" content="Rodion Chachura,geekrodion,increaser">
+
+    <meta property="og:title" content="GeekRodion">
+    <meta property="og:description" content="Time waits for no one, and it won’t wait for me">
+    <meta property="og:image" content="photos/9.jpg">
+    <meta property="og:url" content="https://geekrodion.com">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>geekrodion</title>
   </head>
   <style>
-    @font-face {
-      font-family: Light;
-      src: url("/fonts/light.otf");
-    }
-    @font-face {
-      font-family: Regular;
-      src: url("/fonts/regular.otf");
-    }
-    @font-face {
-      font-family: Medium;
-      src: url("/fonts/medium.otf");
-    }
-    @font-face {
-      font-family: DancingBold;
-      src: url("/fonts/dancing-bold.ttf");
-    }
     * {
       margin: 0;
       outline: none;
       box-sizing: border-box;
-      font-family: Regular;
+      font-family: 'Open Sans', sans-serif;
       user-select: none;
       -webkit-tap-highlight-color:  rgba(255, 255, 255, 0)
     }
