--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="keywords" content="Rodion Chachura,geekrodion,increaser">
-
+    <meta name="Description" content="GeekRodion. Personal WebSite.">
     <meta property="og:title" content="GeekRodion">
     <meta property="og:description" content="Time waits for no one, and it won’t wait for me">
     <meta property="og:image" content="photos/9.jpg">
@@ -27,6 +27,9 @@
     }
   </style>
   <body style="height: 100%">
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root" style="height: 100%"></div>
   </body>
 </html>
